--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,11 @@
     "angular": "1.5.5",
     "angular-animate": "1.5.5",
     "angular-mighty-datepicker": "git://github.com/monterail/angular-mighty-datepicker.git#v0.1.2",
+    "angular-sanitize": "^1.5.7",
     "angular-translate": "2.11.0",
     "angular-ui-router": "0.2.18",
+    "autocomplete.js": "^0.21.0",
+    "autolinker": "^0.27.0",
     "foundation-apps": "1.2.0",
     "jquery": "2.2.3",
     "lodash": "4.11.1",
