--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
     "foundation-apps": "1.2.0",
     "jquery": "2.2.3",
     "lodash": "4.11.1",
-    "moment": "2.13.0"
+    "moment": "2.13.0",
+    "ng-tags-input": "^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.5",
