--- a/fetchFBGroupServer/package.json
+++ b/fetchFBGroupServer/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
     "cors": "^2.7.1",
+    "deferred": "^0.7.5",
     "express": "^4.13.1",
     "express-jwt": "^3.0.1",
     "firebase": "^3.1.0",
+    "fs": "0.0.2",
     "install": "^0.8.1",
     "jquery": "^3.0.0",
     "jsonwebtoken": "^5.0.4",
@@ -26,7 +28,8 @@
     "mongoose": "^4.0.8",
     "morgan": "^1.6.1",
     "npm": "^3.10.3",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request": "^2.73.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
