--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "algoliasearch-helper": "^2.11.0",
     "angular": "1.5.5",
     "angular-animate": "1.5.5",
+    "angular-filter": "^0.5.9",
     "angular-mighty-datepicker": "git://github.com/monterail/angular-mighty-datepicker.git#v0.1.2",
     "angular-sanitize": "^1.5.7",
     "angular-translate": "2.11.0",
@@ -39,7 +40,8 @@
     "jquery": "2.2.3",
     "lodash": "4.11.1",
     "moment": "2.13.0",
-    "ng-tags-input": "^3.1.1"
+    "ng-tags-input": "^3.1.1",
+    "ng-text-truncate": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.5",
