--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
     "autocomplete.js": "^0.21.0",
     "autolinker": "^0.27.0",
     "foundation-apps": "1.2.0",
-    "jquery": "2.2.3",
+    "jquery": "^3.1.0",
     "lodash": "4.11.1",
     "moment": "2.13.0",
     "ng-tags-input": "^3.1.1",
